--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-streamlit
-numpy
-pandas
-scikit-learn
-joblib
-shap
-matplotlib
-imblearn
+streamlit==1.51.0
+pandas==2.2.2
+numpy==2.2.6
+scikit-learn==1.6.1
+joblib==1.5.2
+shap==0.48.0
+matplotlib==3.10.3
+imbalanced-learn==0.13.0
+pytest>=8.0
+pytest-cov>=5.0
+black>=24.0
+ruff>=0.5
+pydantic==2.9.2
+cryptography==43.0.1
+requests==2.32.3
