--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ joblib==1.5.2
 shap==0.48.0
 matplotlib==3.10.3
 imbalanced-learn==0.13.0
+pillow==10.4.0
+plotly==5.23.0
+seaborn==0.13.2
 pytest>=8.0
 pytest-cov>=5.0
 black>=24.0
